Fixed on Firefox

--- a/assets/css/portfolio.scss
+++ b/assets/css/portfolio.scss
@@ -1,31 +1,14 @@
 .portfolio {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: stretch;
-    transform: translate3d(0,0,0);
-    height: 100vh;
-    perspective: 100vw;
-    overflow: hidden;
     transition: background-color 300ms linear;
 
-    &.turn-left {
-        cursor: url('../img/left.png'), auto;
-    }
-
-    &.turn-right {
-        cursor: url('../img/right.png'), auto;
-    }
-
-    &.turn-left, &.turn-right  {
-        & > *:hover {
-            cursor: default;
-        }
-    }
-
-    .menu-container .menu {
-        a, a:visited {
-            color: white;
+    .menu-container {
+        z-index: 2;
+        .menu {
+            a, a:visited {
+                color: white;
+            }
         }
     }
 
@@ -54,6 +37,37 @@
         }
     }
 
+    .card-container {
+        position: absolute;
+        inset: 0;
+        display: flex;
+        flex-direction: column;
+        //background-color: rgba(green, 0.2);
+        animation: slideUp 600ms backwards $easeOutCirc;
+        animation-delay: 100ms;
+        align-items: center;
+        justify-content: stretch;
+        transform: translate3d(0,0,0);
+        height: 100vh;
+        perspective: 100vw;
+        overflow: hidden;
+
+
+        &.turn-left {
+            cursor: url('../img/left.png'), auto;
+        }
+
+        &.turn-right {
+            cursor: url('../img/right.png'), auto;
+        }
+
+        &.turn-left, &.turn-right  {
+            & > *:hover {
+                cursor: default;
+            }
+        }
+    }
+
     .card {
         font-size: 18px;
         width: 45em;
@@ -62,13 +76,7 @@
         position: absolute;
         top: calc(50% - 10em);
         transform-style: preserve-3d;
-        animation: slideUp 600ms backwards $easeOutCirc;
-        animation-delay: 100ms;
         box-shadow: 0 5em 20em 0 rgba(black, 0.1);
-
-        &.fliped {
-            transform: rotateY(-180deg);
-        }
 
         .recto {
             position: absolute;
@@ -76,25 +84,32 @@
             width: 100%;
             visibility:visible;
             backface-visibility: hidden;
-            background-color: $color-1;
-            background-size: cover;
-            border: 1em solid white;
             z-index: 1;
         }
 
         .verso {
+            position: absolute;
             height: 100%;
             width: 100%;
             transform: rotateY(180deg);
+            visibility:visible;
+            backface-visibility: hidden;
+            z-index: 2;
+        }
+
+        .illustration {
+            background-color: $color-1;
+            background-size: cover;
+            border: 1em solid white;
+        }
+
+        .content {
             display: flex;
             flex-direction: row;
             background-color: white;
-            visibility:visible;
-            backface-visibility: hidden;
             padding: 2em;
             color: $text-black;
             box-shadow: inset 0 0 20em rgba(#765d39, 0.1);
-            z-index: 2;
 
             .left {
                 flex: 4;
@@ -170,11 +185,11 @@
         }
     }
 
-    &.card-0 .card .recto { background-image: url('../img/carte_montagne.svg'); }
-    &.card-1 .card .recto { background-image: url('../img/carte_monstera.svg'); }
-    &.card-2 .card .recto { background-image: url('../img/carte_mer.svg'); }
-    &.card-3 .card .recto { background-image: url('../img/carte_glace.svg'); }
-    &.card-4 .card .recto { background-image: url('../img/carte_velo.svg'); }
+    &.card-0 .card .illustration { background-image: url('../img/carte_montagne.svg'); }
+    &.card-1 .card .illustration { background-image: url('../img/carte_monstera.svg'); }
+    &.card-2 .card .illustration { background-image: url('../img/carte_mer.svg'); }
+    &.card-3 .card .illustration { background-image: url('../img/carte_glace.svg'); }
+    &.card-4 .card .illustration { background-image: url('../img/carte_velo.svg'); }
 
     &.card-0 { background-color: $color-3; }
     &.card-1 { background-color: $color-4; }
